--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8",
